--- a/u_courses.html
+++ b/u_courses.html
@@ -15,19 +15,19 @@
     <link th:href="@{/css/btn.css}" rel="stylesheet">
     <link th:href="@{/css/main-nav.css}" rel="stylesheet"> -->
 
-<link href="../css/u_main.css" rel="stylesheet">
- <link href="../css/gap.css" rel="stylesheet">
-<link href="../css/custom-tabs.css" rel="stylesheet">
-<link href="../css/available-course.css" rel="stylesheet">
-<link href="../css/info-blocks.css" rel="stylesheet">
-<link href="../css/progress-bar.css" rel="stylesheet">
-<link href="../css/btn.css" rel="stylesheet">
-<link href="../css/main-nav.css" rel="stylesheet">
+<link href="./css/u_main.css" rel="stylesheet">
+ <link href="./css/gap.css" rel="stylesheet">
+<link href="./css/custom-tabs.css" rel="stylesheet">
+<link href="./css/available-course.css" rel="stylesheet">
+<link href="./css/info-blocks.css" rel="stylesheet">
+<link href="./css/progress-bar.css" rel="stylesheet">
+<link href="./css/btn.css" rel="stylesheet">
+<link href="./css/main-nav.css" rel="stylesheet">
 
 <!-- Мои CSS -->
 
-<link rel="stylesheet" href="../css/blocks/u_courses.css">
-<link rel="stylesheet" href="../css/blocks/menu.css">
+<link rel="stylesheet" href="./css/blocks/u_courses.css">
+<link rel="stylesheet" href="./css/blocks/menu.css">
 </head>
 
 <body class="body">
@@ -48,7 +48,7 @@
         <span class="menu__text">Меню</span>  
       </div>
 
-      <img class="menu__avatar" src="../img/menu/image13.png" alt="avatar">
+      <img class="menu__avatar" src="./img/menu/image13.png" alt="avatar">
     </div>
 
     <nav class="nav">
@@ -75,7 +75,7 @@
         </li>
         <li class="nav__item">
           <a class="nav__link" href="#">
-            <img class="nav__avatar" src="../img/menu/image13.png" alt="avatar">
+            <img class="nav__avatar" src="./img/menu/image13.png" alt="avatar">
             <span>Василиса Петрова</span>
           </a>
         </li>
@@ -159,10 +159,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script src="../js/_tabby.js"></script>
-<script src="../js/tabs.js"></script>
-<script src="../js/progress-bar.js"></script>
-<script src="../js/app.js"></script>
+<script src="./js/_tabby.js"></script>
+<script src="./js/tabs.js"></script>
+<script src="./js/progress-bar.js"></script>
+<script src="./js/app.js"></script>
 <!-- <th:block th:insert="base :: jquery" />
 <script th:src="@{/js/_tabby.js}"></script>
 <script th:src="@{/js/tabs.js}"></script>
