--- a/u_courses.html
+++ b/u_courses.html
@@ -161,6 +161,8 @@
                                               </div>
                                           </div>
                                       </div>
+
+                                      <img src="./img/available-course/SweetsAcademy.png" alt="SweetsAcademy">
                                   </div>
                                   <div class="available-course__title -gap_2" th:utext="${course.name}"></div>
                                   <div class="available-course__type -gap_3">
@@ -201,7 +203,7 @@
                               </div>
                               <div class="available-course__side">
                                   <div class="available-course__image">
-                                      <img src="/img/test-preview.png" alt="">
+                                      <img src="./img/available-course/bg.png" alt="bg">
                                   </div>
                               </div>
                           </div>
