--- a/u_courses.html
+++ b/u_courses.html
@@ -217,7 +217,7 @@
                               </div>
                               <div class="available-course__side">
                                   <div class="available-course__image">
-                                      <img src="/img/available-course/bg.png" alt="bg">
+                                      <img src="./img/available-course/bg.png" alt="bg">
                                   </div>
                               </div>
                           </div>
