like an dislike container fix position

--- a/u_lesson.html
+++ b/u_lesson.html
@@ -42,7 +42,6 @@
 <body class="body">
   <div th:replace="base :: user-nav"></div>
 
- 
   <div class="main-nav main-nav_none hidden">
     <div class="main-nav__wrapper">
 
@@ -53,9 +52,7 @@
               <div class="avatar">
                 <div class="avatar__wrapper avatar__wrapper_large">
                   <span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
-                    avatar
                     <img src="./img/menu/image13.png" alt="avatar">
-
                   </span>
                 </div>
               </div>
@@ -175,8 +172,6 @@
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/main.js"></script>
   </div>
-
-
 
 
   <div class="body__wrapper">
@@ -497,7 +492,7 @@
                               <div class="btn btn_outline-gray like">
                                 <div class="btn__content btn__content_xlarge">
                                   <span class="btn__title btn__icon btn__icon_like btn__title_medium">
-                                    <span class="btn_title-text btn_title-text_small">
+                                    <span class="btn_title-text btn_title-text_small llike__icin">
                                     </span>
                                   </span>
                                 </div>
