--- a/u_lesson.html
+++ b/u_lesson.html
@@ -279,7 +279,7 @@
                   </div>
                   <div class="content-element__main">
                     <div class="content-element__text">
-                      <div class="content-element__text-wrapper -gap_5" style="white-space: pre;"
+                      <div width="30" class="content-element__text-wrapper -gap_5" style="white-space: pre;"
                         th:utext="${lessonBlock.value}">Инвентарь:
 - Миски для замешивания
 - Мерный стакан
@@ -364,7 +364,7 @@
                         </div>
 
                         <div class="content-element__header-item">
-                          <div class="content-element__header-main">
+                          <div class="content-element__header-main file__btns">
                             <div class="content-element__header-btn">
                               <a th:href="" class="btn btn_violet">
                                 <div class="btn__content btn__content_medium">
