--- a/u_lesson.html
+++ b/u_lesson.html
@@ -519,6 +519,9 @@
                                 <div class="btn__content btn__content_xlarge">
                                   <span class="btn__title btn__icon btn__icon_like btn__title_medium">
                                     <span class="btn_title-text btn_title-text_small llike__icin">
+                                      <svg class="like__icon">
+                                        <use xlink:href="sprite.svg#likeIcon"></use>
+                                      </svg>
                                     </span>
                                   </span>
                                 </div>
@@ -529,6 +532,9 @@
                                 <div class="btn__content btn__content_xlarge dislike">
                                   <span class="btn__title btn__icon btn__icon_dislike btn__title_medium">
                                     <span class="btn_title-text btn_title-text_small">
+                                      <svg class="dislike__icon">
+                                        <use xlink:href="sprite.svg#dislikeIcon"></use>
+                                      </svg>
                                     </span>
                                   </span>
                                 </div>
